--- a/main.css
+++ b/main.css
@@ -103,6 +103,7 @@ body, html {
 	padding-top: 10px;
 	border-radius: 5%;
 	padding-left: 15px;
+	margin-top: 15px;
 }
 
 /* Style the textcard's header */
