--- a/main.css
+++ b/main.css
@@ -96,6 +96,7 @@ body, html {
 	height: 250px;
 	box-shadow: 1px 2px 30px black;
 	border-radius: 5%;
+	margin: 15px;
 }
 /* Style the textcard's image */
 .textcard img {
@@ -103,7 +104,6 @@ body, html {
 	padding-top: 10px;
 	border-radius: 5%;
 	padding-left: 15px;
-	margin-top: 15px;
 }
 
 /* Style the textcard's header */
