--- a/main.css
+++ b/main.css
@@ -102,8 +102,9 @@ body, html {
 .textcard img {
 	width: 30%;
 	border-radius: 5%;
+	box-shadow: 1px 2px 30px black;
 	margin-top 15px;
-	margin-left: 15;
+	margin-left: 15px;
 }
 
 /* Style the textcard's header */
