--- a/main.css
+++ b/main.css
@@ -105,14 +105,13 @@ body, html {
 	box-shadow: 1px 2px 30px black;
 	margin-top 15px;
 	margin-left: 15px;
+	margin-bottom: 0;
 }
 
 /* Style the textcard's header */
 .textcard h1 {
 	font-size: 20px;
 	text-align: justify;
-	padding-top: 10px;
-	padding-left: 30px;
 	margin-bottom: 0;
 }
 
