--- a/main.css
+++ b/main.css
@@ -103,7 +103,7 @@ body, html {
 	width: 30%;
 	border-radius: 5%;
 	box-shadow: 1px 2px 30px black;
-	margin-top 15px;
+	margin-top: 15px;
 	margin-left: 15px;
 	margin-bottom: 0;
 }
