--- a/main.css
+++ b/main.css
@@ -98,9 +98,10 @@ body, html {
 	border-radius: 5%;
 	margin: 15px;
 }
+
 /* Style the textcard's image */
 .textcard img {
-	width: 30%;
+	width: 20%;
 	border-radius: 5%;
 	box-shadow: 1px 2px 30px black;
 	margin-top: 15px;
@@ -112,6 +113,8 @@ body, html {
 .textcard h1 {
 	font-size: 20px;
 	text-align: justify;
+	margin-top: 15px;
+	margin-left: 30px;
 	margin-bottom: 0;
 }
 
