--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body, html {
 	max-width: 250px;
 	height: 225px;
 	margin: 15px;
-	border-radius: 5%;
+	border-radius: 10px;
 	box-shadow: 1px 2px 30px black;
 	display: inline-block;
 }
@@ -21,7 +21,7 @@ body, html {
 .card img {
 	margin-top: 15px;
 	width: 50%;
-	border-radius: 5%;
+	border-radius: 10%;
 }
 
 /* Card's header */
@@ -50,8 +50,8 @@ body, html {
 	display: block;
 	background-image: linear-gradient(to bottom right, #0b63ba, #5faaf5);
 	border-radius: 10%;
-	width: 50px;
-	height: 15px;
+	width: 75px;
+	height: 35px;
 	margin-top: 15px;
 }
 
@@ -80,9 +80,8 @@ body, html {
 /* Change the color of the links on hover */
 .navbar a:hover {
 	background-color: #dbdbdb;
-	border: 2px solid;
+	border: 2px solid linear-gradient(to bottom right, #0b63ba, #5faaf5);
 	border-radius: 5px;
-	border-image-source: linear-gradient(to bottom right, #0b63ba, #5faaf5);
 	color: black;
 }
 
