--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ body, html {
 	border-radius: 10%;
 	width: 75px;
 	height: 35px;
-	margin-top: 15px;
+	margin-botton: 15px;
 }
 
 /* Change the color of the button's text on hover */
