--- a/main.css
+++ b/main.css
@@ -46,6 +46,7 @@ body, html {
 	font-size: 20px;
 	text-decoration: none;
 	text-align: center;
+	padding: 5px;
 	color: white;
 	display: block;
 	background-image: linear-gradient(to bottom right, #0b63ba, #5faaf5);
