--- a/main.css
+++ b/main.css
@@ -46,13 +46,13 @@ body, html {
 	font-size: 20px;
 	text-decoration: none;
 	text-align: center;
-	padding: 5px;
+	padding: 4px 6px;
 	color: white;
 	display: block;
 	background-image: linear-gradient(to bottom right, #0b63ba, #5faaf5);
 	border-radius: 10%;
-	width: 75px;
-	height: 35px;
+	width: 60px;
+	height: 20px;
 	margin-botton: 15px;
 }
 
