--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ body, html {
 	color: white;
 	display: block;
 	background-image: linear-gradient(to bottom right, #0b63ba, #5faaf5);
-	border-radius: 10%;
+	border-radius: 20px;
 	width: 60px;
 	height: 20px;
 	padding: 4px 6px;
