--- a/main.css
+++ b/main.css
@@ -47,14 +47,13 @@ body, html {
 	font-size: 20px;
 	text-decoration: none;
 	text-align: center;
-	padding: 4px 6px;
+	vertical-align: middle;
 	color: white;
 	display: block;
 	background-image: linear-gradient(to bottom right, #0b63ba, #5faaf5);
 	border-radius: 20px;
-	width: 60px;
+	width: 50px;
 	height: 20px;
-	padding: 4px 6px;
 }
 
 /* Change the color of the button's text on hover */
