--- a/main.css
+++ b/main.css
@@ -58,7 +58,7 @@ body, html {
 
 /* Change the color of the button's text on hover */
 .card a:hover {
-	box-shadow: 1px 2px 30px black;
+	box-shadow: 1px 2px 30px #5faaf5;
 	color: black;
 }
 
