--- a/main.css
+++ b/main.css
@@ -47,6 +47,7 @@ body, html {
 	font-size: 15px;
 	text-decoration: none;
 	text-align: center;
+	vertical-align: middle;
 	color: white;
 	display: block;
 	background-image: linear-gradient(to bottom right, #0b63ba, #5faaf5);
