--- a/main.css
+++ b/main.css
@@ -24,6 +24,13 @@ body, html {
 	border-radius: 10%;
 }
 
+.card line {
+	width: 60%;
+	height: 2px;
+	padding 5px;
+	border-bottom: 1px solid black;
+}
+
 /* Card's header */
 .card h1 {
 	font-size: 20px;
