--- a/main.css
+++ b/main.css
@@ -5,6 +5,11 @@ body, html {
 	background-color: #1a1a1a;
 }
 
+.title h1 {
+	margin-bottom: 0;
+	padding-left: 15px;
+}	
+
 /* Style the card */
 .card {
 	background-color: #3a403c;
@@ -22,13 +27,6 @@ body, html {
 	margin-top: 15px;
 	width: 50%;
 	border-radius: 10%;
-}
-
-.card line {
-	width: 60%;
-	height: 2px;
-	padding 5px;
-	border-bottom: 1px solid black;
 }
 
 /* Card's header */
