--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,10 @@ body, html {
 	margin: 0px;
 	overflow-x: hidden;
 	font-family: helvetica;
-	background-color: #1a1a1a;
+	background-color: #f2f2f7;
 }
 
-.title h1 {
+.maintitle {
 	text-color: black;
 	font-size: 20px;
 	margin-left: 20px;
@@ -14,4 +14,37 @@ body, html {
 
 .content {
 	margin-top 150px;
+	margin-bottom: 50px;
+	display: inline-block;
 }	
+
+.populartitle {
+	font-size: 15px;
+	margin-left: 35px;
+}
+
+.popular {
+	width: 250px;
+	height: 75px;
+	padding: 10px;
+	border-radius: 12px;
+	background-color: #fff;
+	margin: 10px;
+	box-shadow: 1px 2px 20px;
+}
+
+.popular img {
+	width: 57px;
+	height: 57px;
+	border-radius: 10px;
+	float: left;
+}
+
+.popular h1 {
+	font-size 15px;
+	color: black;
+	margin-left: 50px;
+	margin-top: 0px;
+	margin-bottom: 2px;
+	text-align: justify;
+}
