--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body, html {
 	border-radius: 12px;
 	background-color: #fff;
 	margin: 10px;
-	box-shadow: 1px 2px 20px;
+	box-shadow: 1px 2px 20px black;
 }
 
 .popular img {
@@ -53,7 +53,10 @@ body, html {
 	padding-top 15px;
 	padding-bottom: 15px;
 	width: 100%;
+	bottom: 0;
+	left: 0;
 	background-color: #e5e5ea;
+	box-shadow: 1px 2px 20px black;
 }
 
 .tab {
