--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 body, html {
 	margin: 0px;
 	overflow-x: hidden;
-	font-family: helvetica;
 	background-color: #f2f2f7;
 }
 
 .maintitle {
+	font-family: Arial;
 	text-color: black;
 	font-size: 20px;
 	margin-left: 20px;
@@ -19,6 +19,7 @@ body, html {
 }	
 
 .populartitle {
+	font-family: Arial;
 	font-size: 15px;
 	margin-left: 35px;
 }
@@ -41,6 +42,7 @@ body, html {
 }
 
 .popular h1 {
+	font-family: Arial;
 	font-size 15px;
 	color: black;
 	margin-left: 50px;
@@ -64,5 +66,4 @@ body, html {
 	text-decoration: none;
 	margin: 10px;
 	padding: 5px;
-	
 }
