--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,8 @@ body, html {
 .tab {
 	font-family: 'framework7_iconsregular';
 	text-decoration: none;
+	font-weight: normal;
+	font-style: normal;
 	margin: 10px;
 	padding: 5px;
 }
