--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ body, html {
 }
 
 .tab {
-	font-family: 'framework7_iconsregular';
+	font-family: framework7_iconsregular;
 	text-decoration: none;
 	font-weight: normal;
 	font-style: normal;
