--- a/css/main.css
+++ b/css/main.css
@@ -62,10 +62,13 @@ body, html {
 }
 
 .tab {
+	margin: 10px;
+	padding: 5px;
+}
+
+.tab a {
 	font-family: framework7_iconsregular;
 	text-decoration: none;
 	font-weight: normal;
 	font-style: normal;
-	margin: 10px;
-	padding: 5px;
 }
